RESOLVED FIXED177987
We don't need to clearEmptyObjectStructureForPrototype because JSGlobalObject* is part of the cache's key
https://bugs.webkit.org/show_bug.cgi?id=177987
Summary We don't need to clearEmptyObjectStructureForPrototype because JSGlobalObject...
Saam Barati
Reported 2017-10-05 18:58:11 PDT
Going to run some stuff on EWS to see what happens. Geoff, any idea why we have this? Is it an optimization or needed for correctness?
Attachments
test EWS (1.16 KB, patch)
2017-10-05 19:11 PDT, Saam Barati
no flags
patch (3.59 KB, patch)
2017-10-09 18:47 PDT, Saam Barati
fpizlo: review+
patch for landing (3.78 KB, patch)
2017-10-09 19:55 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-10-05 19:11:26 PDT
Created attachment 322965 [details] test EWS
Build Bot
Comment 2 2017-10-05 19:12:51 PDT
Attachment 322965 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/runtime/PrototypeMap.cpp:84: Should have a space between // and comment [whitespace/comments] [4] ERROR: Source/JavaScriptCore/runtime/PrototypeMap.cpp:85: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 2 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2017-10-09 18:47:42 PDT
Saam Barati
Comment 4 2017-10-09 19:55:15 PDT
Created attachment 323271 [details] patch for landing
WebKit Commit Bot
Comment 5 2017-10-09 22:11:31 PDT
Comment on attachment 323271 [details] patch for landing Clearing flags on attachment: 323271 Committed r223123: <http://trac.webkit.org/changeset/223123>
WebKit Commit Bot
Comment 6 2017-10-09 22:11:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2017-10-09 22:12:08 PDT
Note You need to log in before you can comment on or make changes to this bug.