We don't need to clearEmptyObjectStructureForPrototype because JSGlobalObject* is part of the cache's key https://bugs.webkit.org/show_bug.cgi?id=177987

Reviewed by Filip Pizlo.

* runtime/JSProxy.cpp:
(JSC::JSProxy::setTarget):
* runtime/PrototypeMap.cpp:
(JSC::PrototypeMap::clearEmptyObjectStructureForPrototype): Deleted.
* runtime/PrototypeMap.h:


Canonical link: https://commits.webkit.org/194366@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223123 268f45cc-cd09-0410-ab3c-d52691b4dbfc